supervisor: added log config options

--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -1,5 +1,10 @@
 [supervisord]
 nodaemon = false
+pidfile = /var/run/supervisord.pid
+logfile = /var/log/supervisor/supervisord.log
+logfile_maxbytes = 50MB
+logfile_backups=10
+loglevel = info
 
 [program:crocodile]
 command = /etc/crocodile/sender.py
