--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -2,12 +2,16 @@
 nodaemon = false
 pidfile = /var/run/supervisord.pid
 logfile = /var/log/supervisor/supervisord.log
-logfile_maxbytes = 50MB
-logfile_backups=10
 loglevel = info
 
 [program:crocodile]
 command = /etc/crocodile/sender.py
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
+
+[program:elliptics]
+command = /usr/bin/dnet_ioserv -c /etc/elliptics/ioserv.26.conf
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
