Added include and supervisor tunings

--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -15,3 +15,16 @@ command = bash -c "ulimit -n 50000; ulimit -c unlimited; exec /usr/bin/dnet_iose
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
+
+[include]
+files = /etc/supervisor/conf.d/*.conf
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[unix_http_server]
+file=/var/run//supervisor.sock   ; (the path to the socket file)
+chmod=0700                       ; sockef file mode (default 0700)
+
+[supervisorctl]
+serverurl=unix:///var/run//supervisor.sock ; use a unix:// URL  for a unix socket
