--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -11,7 +11,7 @@ stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
 
 [program:elliptics]
-command = bash -c "ulimit -n 50000; ulimit -c unlimited; exec /usr/bin/dnet_ioserv -c /etc/elliptics/ioserv.26.conf"
+command = bash -c "ulimit -n 50000; ulimit -c unlimited; export LC_ALL=C; exec /usr/bin/dnet_ioserv -c /etc/elliptics/ioserv.26.conf"
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
